Day11 part2 and fix cache hashing